# safe-chain-test

./: .gitignore  .tmp-airdrop-keypair.json  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  write_app.js
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  update2.cjs  update_dict.cjs  update_dict_final.cjs  vite.config.ts
app/frontend/src/: App.tsx  anchorClient.ts  main.tsx  safechain.json  sponsor.json
backend/: .env.example  package-lock.json  package.json
backend/src/: server.ts
migrations/: deploy.ts
programs/safechain/: Cargo.toml
programs/safechain/src/: lib.rs
scripts/: backup-critical.ps1  cleanup-heavy.ps1  dev-box.ps1
tests/: safechain.ts
