[package]
name = "safechain"
version = "0.1.0"
description = "SafeChain on-chain reputation and risk scoring"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "safechain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
solana-program = "=1.18.23"
blake3 = "=1.5.0"
ahash = "=0.8.11"
serde = "=1.0.197"
serde_json = "=1.0.114"
